--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.7",
+    "concat": "^1.0.3",
+    "fs-extra": "^11.2.0",
     "http-proxy-middleware": "^2.0.6",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
